--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,76 @@
 version: "3.9"
 
 services:
+
   db:
     image: postgres:16
     container_name: flyblue_db
-    restart: always
     environment:
       POSTGRES_USER: flyblue_user
       POSTGRES_PASSWORD: flyblue_pass
       POSTGRES_DB: flyblue_db
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   backend:
-    build: .
+    image: guimelbaena88/flyblue-backend:latest
     container_name: flyblue_backend
-    restart: always
     env_file:
-      - .env
+      - .env.backend
     ports:
       - "8000:8000"
     depends_on:
       - db
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - flyblue-net
+
+  frontend:
+    image: guimelbaena88/flyblue-frontend:latest
+    container_name: flyblue_frontend
+    ports:
+      - "80:80"
+    networks:
+      - flyblue-net
+
+  node-exporter:
+    image: prom/node-exporter
+    container_name: node_exporter
+    ports:
+      - "9100:9100"
+    networks:
+      - flyblue-net
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - flyblue-net
+    depends_on:
+      - backend
+      - node-exporter
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+    depends_on:
+      - prometheus
+    networks:
+      - flyblue-net
+
+networks:
+  flyblue-net:
 
 volumes:
   postgres_data:
+  grafana_data:
