--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ bcrypt==3.2.2
 passlib[bcrypt]==1.7.4
 python-jose==3.3.0
 email-validator==2.1.0.post1
+
+# Herramientas de monitoreo
+prometheus-fastapi-instrumentator
+prometheus-client
