--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,9 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
+.env.*.local
+.env.production
 .envrc
 .venv
 env/
@@ -143,6 +146,26 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Keep .env.example
+!.env.example
+!.env.prod.example
+
+# Archivos sensibles y secrets
+*.pem
+*.key
+*.p12
+*.pfx
+*_secrets.txt
+*_SECRETS.txt
+SECRETS*.txt
+secrets*.txt
+credentials*.txt
+passwords*.txt
+
+# Archivos de configuración con datos sensibles
+config.local.*
+settings.local.*
 
 # Spyder project settings
 .spyderproject
