--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.9"
 
 services:
 
-  db:
-    image: postgres:16
-    container_name: flyblue_db
+  postgres:
+    image: postgres:15
+    container_name: flyblue_postgres
     environment:
       POSTGRES_USER: flyblue_user
       POSTGRES_PASSWORD: flyblue_pass
@@ -13,63 +13,73 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - monitoring
 
   backend:
     image: guimelbaena88/flyblue-backend:latest
     container_name: flyblue_backend
-    env_file:
-      - .env.backend
+    environment:
+      DATABASE_URL: postgresql+psycopg2://flyblue_user:flyblue_pass@postgres:5432/flyblue_db
+      SECRET_KEY: mi_clave_super_segura_1234!
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      - postgres
     networks:
-      - flyblue-net
+      - monitoring
 
   frontend:
     image: guimelbaena88/flyblue-frontend:latest
     container_name: flyblue_frontend
     ports:
       - "80:80"
+    depends_on:
+      - backend
     networks:
-      - flyblue-net
-
-  node-exporter:
-    image: prom/node-exporter
-    container_name: node_exporter
-    ports:
-      - "9100:9100"
-    networks:
-      - flyblue-net
+      - monitoring
 
   prometheus:
     image: prom/prometheus
-    container_name: prometheus
+    container_name: flyblue_prometheus
     ports:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
-      - flyblue-net
+      - monitoring
     depends_on:
       - backend
       - node-exporter
 
   grafana:
     image: grafana/grafana
-    container_name: grafana
+    container_name: flyblue_grafana
     ports:
       - "3000:3000"
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
+    volumes:
+      - grafana_data:/var/lib/grafana
     depends_on:
       - prometheus
     networks:
-      - flyblue-net
+      - monitoring
+
+  node-exporter:
+    image: prom/node-exporter
+    container_name: flyblue_node_exporter
+    ports:
+      - "9100:9100"
+    networks:
+      - monitoring
 
 networks:
-  flyblue-net:
+  monitoring:
+    driver: bridge
 
 volumes:
   postgres_data:
