--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,12 +1,17 @@
 global:
   scrape_interval: 5s
+  evaluation_interval: 5s
 
 scrape_configs:
-  - job_name: fastapi
-    metrics_path: /metrics
+  - job_name: 'fastapi'
+    metrics_path: '/metrics'
     static_configs:
-      - targets: ["backend:8000"]
+      - targets: ['backend:8000']
+        labels:
+          service: 'flyblue-backend'
 
-  - job_name: node
+  - job_name: 'node-exporter'
     static_configs:
-      - targets: ["node-exporter:9100"]
+      - targets: ['node-exporter:9100']
+        labels:
+          service: 'system-metrics'
