--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           repository: FlyBlue-DevOps/FlyBlue-Frontend
           path: frontend
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN_GITHUB }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -44,6 +44,19 @@ jobs:
             guimelbaena88/flyblue-backend:${{ github.sha }}
           cache-from: type=registry,ref=guimelbaena88/flyblue-backend:latest
           cache-to: type=inline
+
+      - name: Build and push Frontend Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          file: ./frontend/dockerFile
+          push: true
+          tags: |
+            guimelbaena88/flyblue-frontend:latest
+            guimelbaena88/flyblue-frontend:${{ github.sha }}
+          cache-from: type=registry,ref=guimelbaena88/flyblue-frontend:latest
+          cache-to: type=inline
+
 
       - name: Images digest
         run: |
