Update SCP command to use the correct docker-compose file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,7 @@ jobs:
           EOF
       - name: Copiar archivos de configuración a EC2
         run: |
-          scp -i ~/.ssh/ec2_key.pem backend/docker-compose.prod.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/flyblue-production/docker-compose.yml
+          scp -i ~/.ssh/ec2_key.pem backend/docker-compose.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/flyblue-production/docker-compose.yml
           scp -i ~/.ssh/ec2_key.pem backend/prometheus.yml ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/flyblue-production/prometheus.yml
       - name: Deploy en EC2
         run: |
