Add repository_dispatch event for frontend updates

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
       - monitoreo-despliegue
+  repository_dispatch:
+    types: [frontend-updated]
+
 
 jobs:
   build-and-push:
