--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ bcrypt==4.0.1
 passlib[bcrypt]==1.7.4
 python-jose==3.3.0
 email-validator==2.1.0.post1
-
+prometheus-client
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
